Adding research section and updating for HES Lab

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -204,7 +204,7 @@ p {
         margin-top: 0;
         margin-bottom: 5px;
     }
-    .projects-section {
+    .research-section {
         .intro {
             margin-bottom: 30px;
         }
