Fixing margin on image in research summar

--- a/_includes/research.html
+++ b/_includes/research.html
@@ -24,8 +24,7 @@
       </div>
 
       <div class="project-tagline">
-        <img style = "float: left; width: 50%;" class="img-responsive" src="{{ site.baseurl }}/assets/images/{{ project.graphic }}"/>
-        <br />
+        <img style = "float: left; width: 50%; margin: 5%" class="img-responsive" src="{{ site.baseurl }}/assets/images/{{ project.graphic }}"/>
         {{ project.summary }}
       </div>
 
